--- a/index.html
+++ b/index.html
@@ -19,13 +19,38 @@
         <tbody>
             <tr>
                 <td>6th April, 2024</td>
-                <td>Southwark CC vs LondonSuperKings</td>
+                <td>Southwark CC first XI vs LondonSuperKings</td>
                 <td>Location TBD</td>
             </tr>
             <tr>
                 <td>13th April, 2024</td>
-                <td>Southwark CC vs LondonSuperKings</td>
+                <td>Southwark CC second XI vs LondonSuperKings</td>
                 <td>Location TBD</td>
+            </tr>
+            <tr>
+                <td>13th April, 2024</td>
+                <td>Stokes Newington first XI vs LondonSuperKings</td>
+                <td>Location TBD</td>
+            </tr>
+            <tr>
+                <td>20th April, 2024</td>
+                <td>Roehampton third XI vs LondonSuperKings</td>
+                <td>Location TBD</td>
+            </tr>
+            <tr>
+                <td>20th April, 2024</td>
+                <td>LondonSuperKings vs Amazon CC</td>
+                <td>Regents Park</td>
+            </tr>
+            <tr>
+                <td>27th April, 2024</td>
+                <td>LondonSuperKings vs Desparados</td>
+                <td>Regents Park</td>
+            </tr>
+            <tr>
+                <td>4th May, 2024</td>
+                <td>LondonSuperKings vs LondonSuperKings</td>
+                <td>Regents Park</td>
             </tr>
             <!-- Add more fixtures as needed -->
         </tbody>
