--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Match Fixtures</h1>
+    <h1>Pre-Season Friendly Match Fixtures</h1>
     <table>
         <thead>
             <tr>
@@ -53,6 +53,70 @@
                 <td>Regents Park</td>
             </tr>
             <!-- Add more fixtures as needed -->
+        </tbody>
+    </table>
+    <h1>Team 1 League Match Fixtures</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Match</th>
+                <th>Location</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>11th May, 2024</td>
+                <td>United Sporting Club vs LondonSuperKings</td>
+                <td>Location TBD</td>
+            </tr>
+            <tr>
+                <td>18th May, 2024</td>
+                <td>LondonSuperKings vs North London Muslims</td>
+                <td>Regents Park</td>
+            </tr>
+            <tr>
+                <td>25th May, 2024</td>
+                <td>South Harrow vs LondonSuperKings</td>
+                <td>Location TBD</td>
+            </tr>
+            <tr>
+                <td>1st June, 2024</td>
+                <td>Priory Park vs LondonSuperKings</td>
+                <td>Location TBD</td>
+            </tr>
+        </tbody>
+    </table>
+    <h1>Team 2 League Match Fixtures</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Match</th>
+                <th>Location</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>11th May, 2024</td>
+                <td>LondonSuperKings vs New Calypsonians</td>
+                <td>Regents Park</td>
+            </tr>
+            <tr>
+                <td>18th May, 2024</td>
+                <td>Harlington Meadows vs LondonSuperKings</td>
+                <td>Location TBD</td>
+            </tr>
+            <tr>
+                <td>25th May, 2024</td>
+                <td>LondonSuperKings vs Peshwa</td>
+                <td>Regents Park</td>
+            </tr>
+            <tr>
+                <td>1st June, 2024</td>
+                <td>LondonSuperKings vs Pinner Challengers</td>
+                <td>Regents Park</td>
+            </tr>
         </tbody>
     </table>
 </body>
