--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Recent Announcements</h1>
+    <ul>
+        <li>LSK has secured Regents Park as their home ground for 2024 Middlesex season</li>
+        <li>LSK is organising a Meet and Greet lunch for it's club members on 3rd March. Please mark your availability in the whatsapp group</li>
+    </ul>
     <h1>Pre-Season Friendly Match Fixtures</h1>
     <table>
         <thead>
