--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
         <li>LSK has secured Regents Park as their home ground for 2024 Middlesex season</li>
         <li>LSK is organising a Meet and Greet lunch for it's club members on 3rd March. Please mark your availability in the whatsapp group</li>
     </ul>
+    <h1>Meet the admin team</h1>
+    <ul>
+        <li>Manish</li>
+        <li>Prakash</li>
+        <li>Rushil</li>
+        <li>Sahil</li>
+        <li>Saket</li>
+        <li>Saurabh</li>
+        <li>Shubham</li>
+        <li>Sneh</li>
+        <li>Surjit</li>
+    </ul>
     <h1>Pre-Season Friendly Match Fixtures</h1>
     <table>
         <thead>
