--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li>LSK has secured Regents Park as their home ground for 2024 Middlesex season</li>
         <li>LSK is organising a Meet and Greet lunch for it's club members on 3rd March. Please mark your availability in the whatsapp group</li>
+        <li>LSK is looking for volunteers to join the admin group. There are various positions that are open as listed in the 2024 clun communication</li>
     </ul>
     <h1>Meet the admin team</h1>
     <ul>
