--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 <body>
     <h1>Recent Announcements</h1>
     <ul>
-        <li>LSK has secured Regents Park as their home ground for 2024 Middlesex season</li>
-        <li>LSK is organising a Meet and Greet lunch for it's club members on 3rd March. Please mark your availability in the whatsapp group</li>
-        <li>LSK is looking for volunteers to join the admin group. There are various positions that are open as listed in the 2024 clun communication</li>
+        <li>[Mar 2024]LSK is organising a Meet and Greet lunch for it's club members on 3rd March. Please mark your availability in the whatsapp group</li>
+        <li>[Feb 2024]LSK has secured Regents Park as their home ground for 2024 Middlesex season</li>
+        <li>[Jan 2024]LSK is looking for volunteers to join the admin group. There are various positions that are open as listed in the 2024 clun communication</li>
+    </ul>
+    <h1>Tools we use as a club</h1>
+    <ul>
+        <li>Spond - For nets and match availability</li>
+        <li>Splitwise - For tracking match fees</li>
+        <li>Whatsapp - For communication with members</li>
     </ul>
     <h1>Meet the admin team</h1>
     <ul>
@@ -40,7 +46,7 @@
                 <td>6th April, 2024</td>
                 <td>Southwark CC first XI vs LondonSuperKings</td>
                 <td>Location TBD</td>
-                <td>Link TBD</td>
+                <td><a href="match_report_6th_april_team1.html">Match Summary Link</a></td>
             </tr>
             <tr>
                 <td>13th April, 2024</td>
