--- a/match_report_6th_april_team1.html
+++ b/match_report_6th_april_team1.html
@@ -39,6 +39,12 @@
             text-align: center;
             color: #666;
         }
+	.website-link {
+            display: block;
+            text-align: center;
+            margin-top: 20px;
+            color: #1e88e5;
+        }
     </style>
 </head>
 <body>
@@ -47,6 +53,7 @@
         <div class="match-info">
             <p><span class="team">Southwark CC</span> vs <span class="team">London SuperKings</span></p>
             <p class="score">Final Score: Game hasn't started yet</p>
+            <p class="score">Final Score: Game hasn't started yet</p>
         </div>
         <div class="summary">
             <p>A detailed summary of the match goes here. Game hasn't started yet</p>
@@ -54,6 +61,7 @@
 	    <p>Game hasn't started yet</p>
 	    <p>Game hasn't started yet</p>
         </div>
+	<a href="https://londonsuperkings.play-cricket.com/website/results/5607827" class="website-link">Visit our website for full scorecard</a>
     </div>
 </body>
 </html>
