--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li>[Mar 2024] LSK is organising a Meet and Greet lunch for it's club members on 3rd March. Please mark your availability in the whatsapp group</li>
         <li>[Feb 2024] LSK has secured Regents Park as their home ground for 2024 Middlesex season</li>
-        <li>[Jan 2024] LSK is looking for volunteers to join the admin group. There are various positions that are open as listed in the 2024 clun communication</li>
+        <li>[Jan 2024] LSK is looking for volunteers to join the admin group. There are various positions that are open as listed in the 2024 club communication</li>
     </ul>
     <h1>Tools we use as a club</h1>
     <ul>
