--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <li>Shubham</li>
         <li>Sneh</li>
         <li>Surjit</li>
-    </ul>
+   </ul>
     <h1>Leave Feedback for the admin team</h1>
-        <form action="send_feedback.php" method="post">
-            <label for="feedback">Leave your feedback:</label><br>
-            <textarea id="feedback" name="feedback" rows="4" cols="50"></textarea><br><br>
-            <input type="submit" value="Submit">
-        </form>
+	<form action="https://formspree.io/londonsuperkingscc@gmail.com" method="POST">
+  		<label for="feedback">Leave your feedback:</label><br>
+  		<textarea id="feedback" name="feedback" rows="4" cols="50"></textarea><br><br>
+  		<input type="submit" value="Submit">
+	</form>
     <h1>Pre-Season Friendly Match Fixtures</h1>
     <table>
         <thead>
