--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li>Surjit</li>
    </ul>
     <h1>Leave Feedback for the admin team</h1>
-	<form action="https://formspree.io/londonsuperkingscc@gmail.com" method="POST">
+	<form action="https://formspree.io/f/xayrjdeb" method="POST">
   		<label for="feedback">Leave your feedback:</label><br>
   		<textarea id="feedback" name="feedback" rows="4" cols="50"></textarea><br><br>
   		<input type="submit" value="Submit">
