--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>London SuperKings Match Fixtures</title>
+    <style>
+    /* Display list items horizontally */
+    ul.horizontal-list {
+      list-style-type: none; /* Remove default list styling */
+      padding: 0; /* Remove default padding */
+    }
+
+    ul.horizontal-list li {
+      display: inline-block; /* Display list items horizontally */
+      margin-right: 10px; /* Add some space between list items */
+    }
+  </style>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,7 +26,7 @@
         <li>[Jan 2024] LSK is looking for volunteers to join the admin group. There are various positions that are open as listed in the 2024 club communication</li>
     </ul>
     <h1>Meet the admin team</h1>
-    <ul>
+    <ul class="horizontal-list">
         <li>Manish</li>
         <li>Prakash</li>
         <li>Rushil</li>
