--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
             padding: 5px 10px;
             border-radius: 5px;
         }
+	.container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
         nav ul li a:hover {
             background-color: #ccc;
         }
@@ -54,11 +61,18 @@
             <li><a href="contact.html">Feedback</a></li>
         </ul>
     </nav>
-<main>
-        <!-- Your main content goes here -->
-    </main>
-    <footer>
-        <!-- Your footer content goes here -->
-    </footer>
+<div class="container">
+        <h2>Latest News</h2>
+        <p>Welcome to London Cricket Club's website. Here you will find all the latest news, fixtures, results, and information about our club. Stay tuned for updates!</p>
+	<ul>
+        	<li>[Mar 2024] LSK is organising a Meet and Greet lunch for it's club members on 3rd March. Please mark your availability in the whatsapp group</li>
+        	<li>[Feb 2024] LSK has secured Regents Park as their home ground for 2024 Middlesex season</li>
+        	<li>[Jan 2024] LSK is looking for volunteers to join the admin group. There are various positions that are open as listed in the 2024 club communication</li>
+        </ul>
+        <h2>Upcoming Matches</h2>
+        <p>No upcoming matches scheduled at the moment.</p>
+        <h2>Join London Cricket Club</h2>
+        <p>Interested in joining London Cricket Club? Whether you're a seasoned player or new to the sport, we welcome members of all ages and abilities.</p>
+    </div>
 </body>
 </html>
