--- a/sponsership.html
+++ b/sponsership.html
@@ -34,6 +34,14 @@
     </style>
 </head>
 <body>
+<nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="fixtures.html">Fixtures</a></li>
+            <li><a href="sponsership.html">Sponsership</a></li>
+            <li><a href="contact.html">Feedback</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <h1>London Super Kings Sponsorship Opportunities</h1>
         <p>Thank you for considering sponsoring the London Super Kings! As one of the premier cricket teams in London, we offer various sponsorship packages that provide excellent exposure and benefits for your brand. Whether you're a local business looking to increase your visibility or a corporation seeking to connect with our passionate fanbase, we have opportunities to suit your needs.</p>
