--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,14 @@
   </style>
 </head>
 <body>
+<nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="fixtures.html">Fixtures</a></li>
+            <li><a href="sponsership.html">Sponsership</a></li>
+            <li><a href="contact.html">Feedback</a></li>
+        </ul>
+    </nav>
     <h1>Meet the admin team</h1>
     <ul class="horizontal-list">
         <li>Manish</li>
@@ -32,7 +40,7 @@
    </ul>
     <h1>Leave Feedback for the admin team</h1>
 	<form action="https://formspree.io/f/xayrjdeb" method="POST">
-  		<label for="feedback">Leave your feedback as anonymous:</label><br>
+  		<label for="feedback">Leave your feedback:</label><br>
   		<textarea id="feedback" name="feedback" rows="4" cols="50"></textarea><br><br>
   		<input type="submit" value="Submit">
 	</form>
