--- a/fixtures.html
+++ b/fixtures.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="fixtures.html">Fixtures</a></li>
+            <li><a href="sponsership.html">Sponsership</a></li>
+            <li><a href="contact.html">Feedback</a></li>
+        </ul>
+    </nav>
     <h1>Pre-Season Friendly Match Fixtures</h1>
     <table>
         <thead>
