--- a/sponsership.html
+++ b/sponsership.html
@@ -31,6 +31,29 @@
         a:hover {
             text-decoration: underline;
         }
+	nav {
+            background-color: #f4f4f4;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+        nav ul li a {
+            color: #333;
+            text-decoration: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+        nav ul li a:hover {
+            background-color: #ccc;
+        }
     </style>
 </head>
 <body>
@@ -56,7 +79,7 @@
 
         <h2>Sponsorship Packages</h2>
         <ol>
-            <li><strong>Official Partnerships:</strong> Become an official partner in one of the following categories: Apparel Partner, Equipment Partner, food Partner, etc.</li>
+            <li><strong>Official Partnerships:</strong> Become an official partner in one of the following categories: Apparel Partner, Equipment Partner, Food Partner, etc.</li>
             <li><strong>Match Day Sponsorship:</strong> Sponsor a specific match and benefit from extensive visibility on match day.</li>
             <li><strong>Digital Sponsorship:</strong> Prominent placement of your brand on our website, youtube match sreams and social media platforms.</li>
         </ol>
