--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,29 @@
       display: inline-block; /* Display list items horizontally */
       margin-right: 10px; /* Add some space between list items */
     }
+    nav {
+            background-color: #f4f4f4;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+        nav ul li a {
+            color: #333;
+            text-decoration: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+        nav ul li a:hover {
+            background-color: #ccc;
+        }
   </style>
 </head>
 <body>
