--- a/match_report_6th_april_team1.html
+++ b/match_report_6th_april_team1.html
@@ -45,9 +45,40 @@
             margin-top: 20px;
             color: #1e88e5;
         }
+	nav {
+            background-color: #f4f4f4;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+        nav ul li a {
+            color: #333;
+            text-decoration: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+        nav ul li a:hover {
+            background-color: #ccc;
+        }
     </style>
 </head>
 <body>
+<nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="fixtures.html">Fixtures</a></li>
+            <li><a href="sponsership.html">Sponsership</a></li>
+            <li><a href="contact.html">Feedback</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <h1>Match Report</h1>
         <div class="match-info">
