--- a/sponsership.html
+++ b/sponsership.html
@@ -79,7 +79,7 @@
 
         <h2>Sponsorship Packages</h2>
         <ol>
-            <li><strong>Official Partnerships:</strong> Become an official partner in one of the following categories: <a href="apparel_partner.html">Apparel Partneri</a>, <a href="equipment_partner.html>"Equipment Partner</a>, and <a href="food_partner.html">Food Partner</a></li>
+            <li><strong>Official Partnerships:</strong> Become an official partner in one of the following categories: <a href="apparel_partner.html">Apparel Partner</a>, <a href="equipment_partner.html>"Equipment Partner</a>, and <a href="food_partner.html">Food Partner</a></li>
             <li><strong>Match Day Sponsorship:</strong> Sponsor a specific match and benefit from extensive visibility on match day.</li>
             <li><strong>Digital Sponsorship:</strong> Prominent placement of your brand on our website, youtube match sreams and social media platforms.</li>
         </ol>
