--- a/food_partner.html
+++ b/food_partner.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <header>
-        <h1>Benefits of Becoming a Food Partner</h1>
+        <h1>Benefits of Becoming our Food Partner</h1>
     </header>
     <nav>
         <ul>
