--- a/about_us.html
+++ b/about_us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benefits of Becoming Apparel Partner</title>
+    <title>About Us - London SuperKings Cricket Club</title>
     <style>
         /* CSS for styling the page */
         body {
@@ -55,34 +55,34 @@
         p {
             text-align: justify;
         }
-        .benefit {
-            margin-bottom: 20px;
-        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Benefits of Becoming our Apparel Partner</h1>
+        <h1>About Us - London SuperKings Cricket Club</h1>
     </header>
-    <nav>
+<nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-	    <li><a href="about_us.html">About Us</a></li>
+            <li><a href="about_us.html">About Us</a></li>
             <li><a href="fixtures.html">Fixtures</a></li>
             <li><a href="sponsership.html">Sponsership</a></li>
             <li><a href="contact.html">Feedback</a></li>
         </ul>
     </nav>
     <div class="container">
-        <div class="benefit">
-            <h2>Digital Sponsorship</h2>
-		<p>By becoming an apparel partner with our cricket club, you'll receive digital sponsorship opportunities. This includes logo placement on our website, social media channels, and youtube match streams. This exposure will help increase your brand visibility and reach our dedicated cricket community.</p>
-        </div>
-        <div class="benefit">
-            <h2>Exclusive Branding</h2>
-                <p>Your brand will be prominently displayed on the apparel worn by our players during matches and events. This provides excellent exposure for your brand, both on and off the field, and showcases your support for our cricket club.</p>
-        </div>
-        <!-- Add more benefits as needed -->
+        <h2>Welcome to London Cricket Club</h2>
+        <p>London Cricket Club is a non-profit organization dedicated to promoting cricket in our community. We are committed to providing opportunities for players of all ages and skill levels to participate in the sport we love.</p>
+        <p>As a non-profit club, any profits generated, if any, are reinvested back into the club for the benefit of our members. This includes purchasing new equipment and kits, organizing events and social activities, and securing grounds for future years.</p>
+        <p>Our club is run entirely by volunteers who are passionate about cricket and dedicated to serving our members. None of our volunteers are paid, and we rely on their generosity and commitment to keep our club running smoothly.</p>
+        <h2>Connect with Us</h2>
+        <p>Follow us on social media for the latest updates:</p>
+        <ul>
+            <li><a href="https://www.facebook.com/londonsuperkings">Facebook</a></li>
+            <li><a href="https://www.instagram.com/londonsuperkingscc?igshid=YmMyMTA2M2Y=">Instagram</a></li>
+            <li><a href="https://youtube.com/@londonsuperkingscc1262">Facebook</a></li>
+        </ul>
+        <p>For fixtures, results, and player stats, visit our <a href="https://londonsuperkings.play-cricket.com/home">PlayCricket</a> page.</p>
     </div>
 </body>
 </html>
