--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+	    <li><a href="about_us.html">About Us</a></li>
             <li><a href="fixtures.html">Fixtures</a></li>
             <li><a href="sponsership.html">Sponsership</a></li>
             <li><a href="contact.html">Feedback</a></li>
