--- a/about_us.html
+++ b/about_us.html
@@ -80,7 +80,7 @@
         <ul>
             <li><a href="https://www.facebook.com/londonsuperkings">Facebook</a></li>
             <li><a href="https://www.instagram.com/londonsuperkingscc?igshid=YmMyMTA2M2Y=">Instagram</a></li>
-            <li><a href="https://youtube.com/@londonsuperkingscc1262">Facebook</a></li>
+            <li><a href="https://youtube.com/@londonsuperkingscc1262">Youtube</a></li>
         </ul>
         <p>For fixtures, results, and player stats, visit our <a href="https://londonsuperkings.play-cricket.com/home">PlayCricket</a> page.</p>
     </div>
