--- a/about_us.html
+++ b/about_us.html
@@ -72,7 +72,7 @@
     </nav>
     <div class="container">
         <h2>Welcome to London Cricket Club</h2>
-        <p>London Cricket Club is a non-profit organization dedicated to promoting cricket in our community. We are committed to providing opportunities for players of all ages and skill levels to participate in the sport we love.</p>
+        <p>London SuperKings Cricket Club is a non-profit organization dedicated to promoting cricket in our community. We are committed to providing opportunities for players of all ages and skill levels to participate in the sport we love.</p>
         <p>As a non-profit club, any profits generated, if any, are reinvested back into the club for the benefit of our members. This includes purchasing new equipment and kits, organizing events and social activities, and securing grounds for future years.</p>
         <p>Our club is run entirely by volunteers who are passionate about cricket and dedicated to serving our members. None of our volunteers are paid, and we rely on their generosity and commitment to keep our club running smoothly.</p>
         <h2>Connect with Us</h2>
