--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h2>Latest News</h2>
         <p>Welcome to London Cricket Club's website. Here you will find all the latest news, fixtures, results, and information about our club. Stay tuned for updates!</p>
 	<ul>
-        	<li>[Mar 2024] LSK is organising a Meet and Greet lunch for it's club members on 3rd March. Please mark your availability in the whatsapp group</li>
+        	<li>[Mar 2024] LSK is organising a pre-season Meet and Greet lunch for it's club members on 24th March. Please mark your availability in the whatsapp group</li>
         	<li>[Feb 2024] LSK has secured Regents Park as their home ground for 2024 Middlesex season</li>
         	<li>[Jan 2024] LSK is looking for volunteers to join the admin group. There are various positions that are open as listed in the 2024 club communication</li>
         </ul>
