--- a/fixtures.html
+++ b/fixtures.html
@@ -30,6 +30,12 @@
             </tr>
         </thead>
         <tbody>
+	    <tr>
+                <td>1st April, 2024</td>
+                <td>LondonSuperKings vs Desperados</td>
+                <td>Location TBD</td>
+                <td>Link TBD></td>
+            </tr>
             <tr>
                 <td>6th April, 2024</td>
                 <td>Southwark CC first XI vs LondonSuperKings</td>
